# ZMSoftwareTool

./: .gitignore  AGENTS.md  PnP.py  README.md  ZMSoftware.spec  ZMSoftwareOneFile.spec  environment.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  app_context.py  main_window.py
build_tools/: pyinstaller_runtime_hook.py
config/: active_parameters.yaml  calib_params.yaml  calibration_result.yaml  calibration_result_new.yaml  nominal_robot.yaml  nominal_robot_bak.yaml  project.yaml  robot.yaml  theme.yaml  thresholds.yaml  verification.yaml  workstations.yaml
core/: __init__.py  accuracy_evaluator.py  calibration_analyzer.py  calibration_data_loader.py  calibration_dataset_packager.py  calibration_persistence.py  calibration_service.py  config_manager.py  error_param_manager.py  health_evaluator.py  image_comparator.py  model_degradation_monitoring.py  nominal_parameter_service.py  parameter_repository.py  project_manager.py  report_generator.py  robot_model_loader.py  verification_manager.py  workstation_verification.py
docs/: PROJECT_OVERVIEW.md  TASK_LOG.md  UI_COMPLETION_STATUS.md  calibration_integration_report.html  calibration_test_report.html  identification_ui_optimization_report.html  model_degradation_monitoring_plan.md  model_degradation_monitoring_update_report.html  parameter_management_improvement_plan.md  robot_color_refactor_plan.html
tests/: test_calibration.py  test_initialization_page.py  test_model_degradation_monitoring.py  test_nominal_parameter_dialog.py  test_nominal_parameter_service.py  (+3 more)
(+272 files in other folders)
