[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zm-robot-digital-twin-tool"
version = "0.1.0"
description = "Local robot digital twin tool for UR simulation, calibration analysis, accuracy evaluation, and verification."
requires-python = ">=3.12,<3.13"
dependencies = [
  "PySide6>=6.7",
  "pyqtgraph>=0.13",
  "PyOpenGL>=3.1",
  "vtk>=9.3,<9.6",
  "pyvista==0.46.5",
  "pyvistaqt>=0.11",
  "yourdfpy>=0.0.60",
  "xacro>=2.1",
  "trimesh>=4.0",
  "lxml>=5.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "jsonschema>=4.22",
  "opencv-python>=4.9",
  "Jinja2>=3.1",
  "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
zmsoftware = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
